--- a/styles/06.Components/ContactUs/_components-contact-us-main.scss
+++ b/styles/06.Components/ContactUs/_components-contact-us-main.scss
@@ -47,7 +47,7 @@
         grid-template-rows: auto;
         row-gap: 48px;
         margin-top: 96px;
-        margin-bottom: 96px;
+        margin-bottom: 108px;
 
         &__header {
             color: $primary-300;
