--- a/styles/06.Components/Course/_components-course-main.scss
+++ b/styles/06.Components/Course/_components-course-main.scss
@@ -72,6 +72,8 @@
         @include for-desktop-up {
             grid-template-columns: 1fr min-content;
             column-gap: 110px;
+            row-gap: unset;
+            margin-top: 32px;
         }
 
         &__main {
@@ -117,6 +119,7 @@
         @include for-tablet-landscape-up {                
             grid-template-columns: 1fr 10px 1fr;
             column-gap: 90px;
+            row-gap: unset;
     
             &__border {
                 height: 100%;
@@ -188,6 +191,8 @@
         @include for-desktop-up {                
             grid-template-columns: 1fr 10px 1fr;
             column-gap: 32px;
+            row-gap: unset;
+            margin-bottom: 160px;
     
             &__border {
                 height: 100%;
